Migate to Java 11.
* Update README.
* Update plugins and dependencies.
* Add JavaFX dependencies.
* Replace maven-dependency-plugin with maven-shade-plugin.
* Add module declarations.
* Remove use of deprecated items.